# django-htmx-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
htmx_utils/: __init__.py  actions.py  context_processors.py  middleware.py  tests.py
htmx_utils/actions/: __init__.py
htmx_utils/views/: __init__.py  mixins.py  views.py
